Fixed so many errors/bugs
First basket page, the checkout button was not working. Had to resort to older code to fix it. Also removed duplicate code. Fixed CSS in basket page, show page, wishlist page.
Had to also uncooment the checkout functionality in the routing page, i dont know why someone from the frontend team did that, it completely messed up the code.
Fixed the alert messaging in the show page. There were so much duplicate code, it was messing up the whole thing :/

--- a/team-project/public/css/basket.css
+++ b/team-project/public/css/basket.css
@@ -217,6 +217,7 @@ h2{
     position: absolute;
   left: 10px;
   top: 180px;
+  margin-top: 20px;
   color: #283747;
 }
 
@@ -229,6 +230,8 @@ h5{
     top:220px;
     left:10px;
     position: absolute;
+    padding-left: 350px;
+    padding-top: 130px;
 }
 
 .basket-page thead tr{
@@ -239,17 +242,19 @@ h5{
 
 }
 .btn {
-    position: absolute;
-    right: 100px;
-    top:500px;
-            background:#283747;
-            color:white;
-            border: none;
-            padding: 10px 20px;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-            transition: background 0.2s linear;
+    background: var(--button-color);
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background 0.2s linear;
+    margin-top: 20px; 
+    display: block; 
+    width: fit-content; 
+    margin-left: auto; 
+    
         }
 
         .btn:hover {
@@ -258,8 +263,8 @@ h5{
 .discount{
     position: absolute;
     margin-top:auto;
-  left: 350px;
-  top: 500px;
+  left: 830px;
+  top: 210px;
   color:green;
   
 }
